# impactcal-mx

./: .gitignore  CAL_MOC.md  CLAUDE.md  OBSIDIAN_SETUP.md  README.md  REPO_STRUCTURE.md  _INDEX.md  environment.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: compact-canon.md  digest.md  link-check.md  new-note.md  warmstart.md
configs/: calibracion.yaml
context/: 00_README_CONTEXT.md  DATA_CONTRACTS.md  DECISIONS.md  GLOSSARY.md  OPEN_QUESTIONS.md  REFERENCES.md  WORKFLOW.md
notes/pipelines/: crosswalk-v1-hazard-side.md  hazard-freeze-inputs.md  hazard-rf-glofas.md  hazard-rf-isimip.md  hazard-surge-generation.md  hazard-tc-generation.md  litpop-exposure.md  target-rutaB-2000-2023.md  timestep-convergence-test.md
notes/reading/: 2026-07-12_crosswalk-v0-cenapred.md  2026-07-12_yagni-ponytail-audit.md  2026-07-14_crosswalk-v1.md  2026-07-14_hazard-freeze-exposures.md  2026-07-14_hazard-tc-generation.md  2026-07-16_hazard-surge-rf.md  2026-07-18_cnsf-agricola-correcciones.md  2026-07-18_inspeccion-datos-qa.md  2026-07-23_cenapred-extension-glofas.md
notes/theory/: Calibracion_Impacto_Mexico_Master.md
scraps/cnsf_agricola_dq/: detalle_suma_inflada_2022_2024.md  hallazgos_agricola.csv  renglones_correccion_propuesta.csv  resumen_hallazgos.md  revision_calidad_agricola.py
scraps/cnsf_outliers_corn_sinaloa/: analisis_maiz_dulce.py  (+5 more)
tests/: test_crosswalk.py  test_exposure.py  test_glofas.py  test_hazard_surge_rf.py  test_hazard_tc.py  test_infra.py  test_ingesta.py  test_inspeccion.py  test_perdidas.py  test_rf_glofas.py  test_timestep_test.py
(+29 files in other folders)
