[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "impactcal"
version = "0.1.0"
description = "Subnational (state-level) CLIMADA impact-function calibration for Mexico — hydrometeorological perils"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "pyyaml",
]

[project.optional-dependencies]
climada = ["climada", "climada-petals", "geopandas"]   # heavy stack; install via conda env (environment.yml) in practice
bayes = ["pymc", "arviz"]
inspeccion = ["matplotlib", "ydata-profiling"]
dev = ["pytest", "ruff", "black", "pre-commit"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
